@@ -351,6 +351,7 @@ namespace mscl
             case WirelessModels::node_gLink_200_40g_oem:
             case WirelessModels::node_gLink_200_40g_oem_mmcx:
             case WirelessModels::node_gLink_200_40g_oem_u_fl:
+            case WirelessModels::node_gLink_200_40g_s:
                 return RANGES_GLINK200_40G;
 
             case WirelessModels::node_tcLink200_oem:
