@@ -114,6 +114,7 @@ namespace mscl
         case WirelessModels::node_gLink_200_40g_oem_mmcx:
         case WirelessModels::node_gLink_200_8g_oem_u_fl:
         case WirelessModels::node_gLink_200_40g_oem_u_fl:
+        case WirelessModels::node_gLink_200_40g_s:
             return std::unique_ptr<NodeFeatures>(new NodeFeatures_glink200(info));
 
         case WirelessModels::node_gLink_200_r:
