@@ -15,6 +15,7 @@ REMOVED - A function/class has been removed.
 ======================================================================================================
 
 Forthcoming
+- Added support for G-Link-200 6522-6001 (custom default configuration)
 - Added support for MIP commands:
     - Event Trigger Configuration (0x0C,0x2E)
     - Get Calibrated Sensor Ranges (0x0C,0x53)
